Add basic html structure & basic styles to quiz area

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Friends-The One with the Quiz</title>
 </head>
 <body>
+    <div class="logo"></div>
+    <div class="quizArea">
+        <span class="question"></span>
+        <ul>
+            <li class="options"></li>
+            <li class="options"></li>
+            <li class="options"></li>
+            <li class="options"></li>
+        </ul>
+        <span class="score">Current Score: 0</span>
+    </div>
     <script src="assets/js/script.js"></script>
 </body>
 </html>
