add basic javascript structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <div class="logo"></div>
+    <div class="popUp">
+        <h1>How You Doin'!</h1>
+        <p>Welcome to the Friends Tv Show Trivia Game!</p>
+        <p>Do you have what it takes to score 10/10?</p>
+        <button class="btn" type="submit">Click to Begin</button>
+    </div>
     <div class="quizArea">
         <span class="question"></span>
         <ul>
