add questions array for quiz to js file

--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Friends-The One with the Quiz</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="logo"></div>
     <div class="popUp">
-        <h1>How You Doin'!</h1>
-        <p>Welcome to the Friends Tv Show Trivia Game!</p>
-        <p>Do you have what it takes to score 10/10?</p>
-        <button class="btn" type="submit">Click to Begin</button>
+      <h1>How You Doin'!</h1>
+      <p>Welcome to the Friends Tv Show Trivia Game!</p>
+      <p>Do you have what it takes to score 10/10?</p>
+      <button class="btn" type="submit">Click to Begin</button>
     </div>
     <div class="quizArea">
-        <span class="question"></span>
-        <ul>
-            <li class="options"></li>
-            <li class="options"></li>
-            <li class="options"></li>
-            <li class="options"></li>
-        </ul>
-        <span class="score">Current Score: 0</span>
+      <span class="question"></span>
+      <ul>
+        <li class="options"></li>
+        <li class="options"></li>
+        <li class="options"></li>
+        <li class="options"></li>
+      </ul>
+      <span class="score">Current Score: 0</span>
     </div>
     <script src="assets/js/script.js"></script>
-</body>
+  </body>
 </html>
