add code to increment score and show instructions

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <span class="answerBtns" id="answerBtns">
       </span>
       <button id="nextBtn" class="btn">Next</button>
-      <span class="score">Current Score: 0</span>
+      <span class="score" id="score">0</span>
     </div>
     <script defer type="module" src="assets/js/script.js"></script>
     <script type="module" src="assets/js/questions.js"></script>
