--- a/index.html
+++ b/index.html
@@ -10,19 +10,25 @@
   <body>
     <div class="logo"></div>
     <div class="popUp" id="popUp">
-      <h1>How You Doin'! Welcome to the Friends Tv Show Trivia Game!</h1>
+      <h1 id="text">
+        How You Doin'! Welcome to the Friends Tv Show Trivia Game!
+      </h1>
+      <h1 id="instructionNote" class="hide">
+        "Click Play button to begin. Choose one answer from the four multiple
+        choice questions. Answers will change to green for correct, red for
+        incorrect. Click Next to move onto the next question. At the end of the
+        quiz you will receive your final score and the option to be added to the
+        leaderboard. Good Luck!"
+      </h1>
       <div class="controls">
         <button class="playBtn btn" id="playBtn">Play</button>
-        <button class="instructionBtn btn" id="instructionBtn">
-          Instructions
-        </button>
+        <button class="instructionBtn btn" id="instructionBtn"></button>
         <button class="scoresBtn btn" id="scoresBtn">Leaderboard</button>
       </div>
     </div>
     <div class="quizArea hide" id="quizArea">
       <span class="questions" id="question">Question</span>
-      <span class="answerBtns" id="answerBtns">
-      </span>
+      <span class="answerBtns" id="answerBtns"> </span>
       <button id="nextBtn" class="btn">Next</button>
       <span class="score" id="score">0</span>
     </div>
