add function to save and display a high score

--- a/index.html
+++ b/index.html
@@ -48,13 +48,9 @@
         </div>
     </section>
     <section>
-        
-    </section>
-    <section>
         <div id="leaderboard" class="highScores hide">
             <h1 id="endScore">Leaderboard</h1>
-            <ul id="highScoresList"></ul>
-
+            <ol id="highScores"></ol>
     </div>
 
      </div></section>
