--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Friends-The One with the Quiz</title>
+    <link rel="icon" type="image/x-icon" href="documents/images/favicon.webp">
   </head>
   <body>
     <header>
