--- a/index.html
+++ b/index.html
@@ -14,25 +14,24 @@
         </div>
     </header>
     <section>
+        <!--Welcome Page-->
      <div class="popUp" id="popUp">
           <h1 id="text">
         How You Doin'! Welcome to the Friends Tv Show Trivia Game!
           </h1>
-          <h1 id="instructionNote" class="hide">
-        "Click Play button to begin. Choose one answer from the four multiple
-        choice questions. Answers will change to green for correct, red for
-        incorrect. Click Next to move onto the next question. At the end of the
+        <!--Instructions Text-->  
+          <h2 id="instructionNote" class="hide">
+        "Click Play button to begin. <br> Choose one answer from the four multiple
+        choice questions. <br> Answers will change to green for correct, red for
+        incorrect. <br> Click Next to move onto the next question. <br> At the end of the
         quiz you will receive your final score and the option to be added to the
-        leaderboard. Good Luck!"
-          </h1> 
-          <div id="end" class="finalScore hide">
-            <h1 id="EndScore">0</h1>
-            <form class="end-form-container">
-                <h2 id="end-text">Enter your username below to save your score!</h2>
-                <input type="text" name="name" id="username" placeholder="Enter your username">
-                <button class="btn hide" id="saveScoreBtn" type="submit">Save</button>
-            </form>
-        </div>
+        leaderboard. <br> Good Luck!"
+          </h2>
+        <!--Score Area-->   
+          <div class="finalScore hide">
+            <h1 id="finalscore">0</h1>
+          </div>
+        <!--Game Buttons-->  
         <div class="controls">
           <button class="playBtn btn" id="playBtn">Play</button>
           <button class="instructionBtn btn" id="instructionBtn"></button>
@@ -41,6 +40,7 @@
      </div>   
     </section>
     <section>
+        <!--Quiz Game Section-->
         <div class="quizArea hide" id="quizArea">
           <span class="questions" id="question">Question</span>
           <span class="answerBtns" id="answerBtns"> </span>
@@ -49,12 +49,12 @@
         </div>
     </section>
     <section>
+        <!--Leaderboard-->
         <div id="leaderboard" class="highScores hide">
             <h1 id="endScore">Leaderboard</h1>
             <ol id="highScores"></ol>
-    </div>
-
-     </div></section>
+        </div>
+    </section>
     <script defer type="module" src="assets/js/script.js"></script>
     <script type="module" src="assets/js/questions.js"></script>
   </body>
