resolve errors in endGame function

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         leaderboard. <br> Good Luck!"
           </h2>
         <!--Score Area-->   
-          <div class="finalScore hide">
-            <h1 id="finalscore">0</h1>
-          </div>
+          <h1 class="finalScore hide" id="finalScore">
+            0
+          </h1>
+    
         <!--Game Buttons-->  
         <div class="controls">
           <button class="playBtn btn" id="playBtn">Play</button>
