--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="modalContent">
                 <h2 id="endGameResult">High Score</h2>
                 <label for="username">Enter Username</label>
-                <input id="username" class="username" type="text" placeholder="Enter your username">
+                <input id="username" class="usernameBox" type="text" placeholder="Enter your username">
                 <button id="saveBtn" class="modalbtn" disabled>Save</button>
             </div> </div>
         <!--Leaderboard-->
