debugging score display and question shuffling issues

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2 id="endGameResult">High Score</h2>
                 <label for="username">Enter Username</label>
                 <input id="username" class="usernameBox" type="text" placeholder="Enter your username">
-                <button id="saveBtn" class="modalbtn" disabled>Save</button>
+                <button id="saveBtn" class="modalbtn" type="submit" disabled>Save</button>
             </div> </div>
         <!--Leaderboard-->
         <div id="leaderboard" class="leaderboard hide">
