debug issue with import statement

--- a/index.html
+++ b/index.html
@@ -70,6 +70,6 @@
       </div>
     </section>
     <footer></footer>
-    <script defer src="assets/js/script.js"></script>
+    <script type="module" src="assets/js/script.js"></script>
   </body>
 </html>
