--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="logo"></div>
     </header>
-    <section>
+    <main>
       <!--Welcome Page-->
       <div class="popUp" id="popUp">
         <h1 id="text">
@@ -28,7 +28,6 @@
           option to be added to the leaderboard. <br />
           Good Luck!
         </h2>
-
         <!--Modal Box-->
         <div id="myModal" class="modal hide">
           <div class="modalContent">
@@ -59,16 +58,13 @@
           <button class="scoresBtn btn" id="scoresBtn">Leaderboard</button>
         </div>
       </div>
-    </section>
-    <section>
-      <!--Quiz Game Section-->
+    <!--Quiz Game Section-->
       <div class="quizArea hide" id="quizArea">
-        <span class="questions" id="question">Question</span>
+        <span class="questions" id="question"><h1>Question</h1></span>
         <span class="answerBtns" id="answerBtns"></span>
         <button id="nextBtn" class="btn">Next</button>
         <span class="scoreArea" id="score">0</span>
       </div>
-    </section>
     <footer></footer>
     <script type="module" src="assets/js/script.js"></script>
   </body>
