fix validation errors

--- a/index.html
+++ b/index.html
@@ -58,13 +58,14 @@
           <button class="scoresBtn btn" id="scoresBtn">Leaderboard</button>
         </div>
       </div>
-    <!--Quiz Game Section-->
+      <!--Quiz Game Section-->
       <div class="quizArea hide" id="quizArea">
-        <span class="questions" id="question"><h1>Question</h1></span>
+        <span class="questions" id="question">Question</span>
         <span class="answerBtns" id="answerBtns"></span>
         <button id="nextBtn" class="btn">Next</button>
         <span class="scoreArea" id="score">0</span>
       </div>
+    </main>
     <footer></footer>
     <script type="module" src="assets/js/script.js"></script>
   </body>
